objects/EUR_CRM_Group_Outlet_Type__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>EUR_CRM_Affiliate_Country__c</fullName>
        <formula>EUR_CRM_Affiliate__r.EUR_CRM_Country__c</formula>
        <label>Affiliate Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Affiliate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Affiliate</label>
        <referenceTo>EUR_CRM_Affiliate__c</referenceTo>
        <relationshipName>EUR_CRM_Group_Outlet_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <formula>IF(CONTAINS(RecordType.DeveloperName, &quot;PRT&quot;), &quot;PRT&quot;, RIGHT(LEFT(RecordType.DeveloperName,6),2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Group_Outlet_Name__c</fullName>
        <label>Group Outlet Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Nightclub</fullName>
                </value>
                <value>
                    <fullName>Low Energy Bar</fullName>
                </value>
                <value>
                    <fullName>High Energy Bar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Image_Criteria_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Image Level Criteria Set</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 3) OR (1 AND 4 AND 5) OR (1 AND 6 AND 7) OR (1 AND 8 AND 9 AND 10)</booleanFilter>
            <filterItems>
                <field>EUR_CRM_Criteria_Set__c.RecordType.DeveloperName</field>
                <operation>contains</operation>
                <value>Image</value>
            </filterItems>
            <filterItems>
                <field>EUR_CRM_Criteria_Set__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>EUR_LT_Image_Level_Criteria</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>EUR LT Group Outlet</value>
            </filterItems>
            <filterItems>
                <field>EUR_CRM_Criteria_Set__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>EUR_EE_Image_Level_Criteria</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>EUR EE Group Outlet</value>
            </filterItems>
            <filterItems>
                <field>EUR_CRM_Criteria_Set__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>EUR_LV_Image_Level_Criteria</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>EUR LV Group Outlet</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>EUR LV Group Outlet</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>EUR EE Group Outlet</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>EUR LT Group Outlet</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EUR_CRM_Criteria_Set__c</referenceTo>
        <relationshipName>EUR_CRM_Group_Outlet_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Outlet_Type_Count__c</fullName>
        <label>Outlet Type Count</label>
        <summaryForeignKey>EUR_CRM_Outlet_Type__c.EUR_CRM_Group_Outlet_Type__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region (EU)</label>
        <referenceTo>EUR_CRM_Region__c</referenceTo>
        <relationshipLabel>Group Outlet Type (EU)</relationshipLabel>
        <relationshipName>Group_Outlet_Type_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Volume_Criteria_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Volume Potential Criteria Set</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 3) OR (1 AND 4 AND 5) OR (1 AND 6 AND 7) OR (1 AND 8 AND 9 AND 10)</booleanFilter>
            <filterItems>
                <field>EUR_CRM_Criteria_Set__c.RecordType.DeveloperName</field>
                <operation>contains</operation>
                <value>Volume</value>
            </filterItems>
            <filterItems>
                <field>EUR_CRM_Criteria_Set__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>EUR_EE_Volume_Potential_Criteria</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>EUR EE Group Outlet</value>
            </filterItems>
            <filterItems>
                <field>EUR_CRM_Criteria_Set__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>EUR_LT_Volume_Potential_Criteria</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>EUR LT Group Outlet</value>
            </filterItems>
            <filterItems>
                <field>EUR_CRM_Criteria_Set__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>EUR_LV_LV_Volume_Potential_Criteria</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>EUR LV Group Outlet</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>EUR EE Group Outlet</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>EUR LV Group Outlet</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>EUR LT Group Outlet</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>EUR_CRM_Criteria_Set__c</referenceTo>
        <relationshipLabel>Group Outlet Type (EU) (Volume Potential Criteria Set)</relationshipLabel>
        <relationshipName>EUR_CRM_Volume_Group_Outlet_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Group Outlet Type (EU)</label>
    <listViews>
        <fullName>DK_Group_Outlet_Types</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Group_Outlet_Name__c</columns>
        <columns>EUR_CRM_Image_Criteria_Set__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Volume_Criteria_Set__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Affiliate__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Group_Outlet_Type__c.EUR_DK_Group_Outlet</value>
        </filters>
        <label>DK Group Outlet Types</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_AO_Group_Outlet_Types</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Group_Outlet_Name__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Outlet_Type_Count__c</columns>
        <columns>EUR_CRM_Image_Criteria_Set__c</columns>
        <columns>EUR_CRM_Volume_Criteria_Set__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Affiliate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Group_Outlet_Type__c.EUR_AO_Group_Outlet_Type</value>
        </filters>
        <label>EUR AO Group Outlet Types</label>
        <language>en_US</language>
        <sharedTo>
            <group>PRH_PR_EMEA</group>
            <roleAndSubordinates>EUR_AO</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_AT_Group_Outlet_Types</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Group_Outlet_Name__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Outlet_Type_Count__c</columns>
        <columns>EUR_CRM_Image_Criteria_Set__c</columns>
        <columns>EUR_CRM_Volume_Criteria_Set__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Affiliate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Group_Outlet_Type__c.EUR_AT_Group_Outlet</value>
        </filters>
        <label>EUR AT Group Outlet Types</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_AT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_BG_All_Group_Outlet_Type_View</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Group_Outlet_Name__c</columns>
        <columns>EUR_CRM_Image_Criteria_Set__c</columns>
        <columns>EUR_CRM_Volume_Criteria_Set__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Affiliate__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Group_Outlet_Type__c.EUR_BG_Group_Outlet_Type</value>
        </filters>
        <label>EUR BG All Group Outlet Type View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_CH_Group_Outlet_Types</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Group_Outlet_Name__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Outlet_Type_Count__c</columns>
        <columns>EUR_CRM_Image_Criteria_Set__c</columns>
        <columns>EUR_CRM_Volume_Criteria_Set__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Affiliate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Group_Outlet_Type__c.EUR_CH_Group_Outlet_Type</value>
        </filters>
        <label>EUR CH Group Outlet Types</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_CH</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_DE_All_Group_Outlet_Type_View</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Group_Outlet_Name__c</columns>
        <columns>EUR_CRM_Image_Criteria_Set__c</columns>
        <columns>EUR_CRM_Volume_Criteria_Set__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Affiliate__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Group_Outlet_Type__c.EUR_DE_Group_Outlet</value>
        </filters>
        <label>EUR DE All Group Outlet Type View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_KE_Group_Outlet_Types</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Group_Outlet_Name__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Outlet_Type_Count__c</columns>
        <columns>EUR_CRM_Image_Criteria_Set__c</columns>
        <columns>EUR_CRM_Volume_Criteria_Set__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Affiliate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Group_Outlet_Type__c.EUR_KE_Group_Outlet_Type</value>
        </filters>
        <label>EUR KE Group Outlet Types</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_MA_Group_Outlet_Types</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Group_Outlet_Name__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Outlet_Type_Count__c</columns>
        <columns>EUR_CRM_Image_Criteria_Set__c</columns>
        <columns>EUR_CRM_Volume_Criteria_Set__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Affiliate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Group_Outlet_Type__c.EUR_MA_Group_Outlet_Type</value>
        </filters>
        <label>EUR MA Group Outlet Types</label>
        <language>en_US</language>
        <sharedTo>
            <group>PRH_PR_EMEA</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_GB_Group_Outlet_Types</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Group_Outlet_Name__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Outlet_Type_Count__c</columns>
        <columns>EUR_CRM_Image_Criteria_Set__c</columns>
        <columns>EUR_CRM_Volume_Criteria_Set__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Affiliate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Group_Outlet_Type__c.EUR_GB_Group_Outlet</value>
        </filters>
        <label>EUR GB Group Outlet Types</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_GB</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_KE_GOT</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Group_Outlet_Type__c.EUR_KE_Group_Outlet_Type</value>
        </filters>
        <label>EUR KE GOT</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_KE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_NG_Group_Outlet_Types</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Group_Outlet_Name__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Outlet_Type_Count__c</columns>
        <columns>EUR_CRM_Image_Criteria_Set__c</columns>
        <columns>EUR_CRM_Volume_Criteria_Set__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Affiliate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Group_Outlet_Type__c.EUR_NG_Group_Outlet_Type</value>
        </filters>
        <label>EUR NG Group Outlet Types</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EUR_PT_Group_Outlet_Type</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Group_Outlet_Name__c</columns>
        <columns>EUR_CRM_Image_Criteria_Set__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Outlet_Type_Count__c</columns>
        <columns>EUR_CRM_Volume_Criteria_Set__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Group_Outlet_Type__c.EUR_PT_Group_Outlet_Type</value>
        </filters>
        <label>PT Group Outlet Type</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_PT_Group_Outlet_Types</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Group_Outlet_Name__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Outlet_Type_Count__c</columns>
        <columns>EUR_CRM_Image_Criteria_Set__c</columns>
        <columns>EUR_CRM_Volume_Criteria_Set__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Affiliate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Group_Outlet_Type__c.EUR_PRT_GroupOutletType</value>
        </filters>
        <label>EUR PTGroup Outlet Types</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_RU</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Region__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Group_Outlet_Name__c</columns>
        <columns>EUR_CRM_Image_Criteria_Set__c</columns>
        <columns>EUR_CRM_Volume_Criteria_Set__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Group_Outlet_Type__c.EUR_RU_Group_Outlet_Type</value>
        </filters>
        <label>EUR RU</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA</role>
            <role>EUR_RU</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_ZA_Group_Outlet_Types</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Group_Outlet_Name__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Outlet_Type_Count__c</columns>
        <columns>EUR_CRM_Image_Criteria_Set__c</columns>
        <columns>EUR_CRM_Volume_Criteria_Set__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Affiliate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Group_Outlet_Type__c.EUR_ZA_Group_Outlet_Type</value>
        </filters>
        <label>EUR ZA Group Outlet Types</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>GO-{00000}</displayFormat>
        <label>Group Outlet Type No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Outlet Type (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_AO_Group_Outlet_Type</fullName>
        <active>true</active>
        <label>EUR AO Group Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_AT_Group_Outlet</fullName>
        <active>true</active>
        <label>EUR AT Group Outlet</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Group_Outlet_Type</fullName>
        <active>true</active>
        <label>EUR BG Group Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CH_Group_Outlet_Type</fullName>
        <active>true</active>
        <label>EUR CH Group Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Group_Outlet</fullName>
        <active>true</active>
        <label>EUR DE Group Outlet</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Group_Outlet</fullName>
        <active>true</active>
        <description>Record Type for DK Group Outlet Type</description>
        <label>EUR DK Group Outlet</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_EE_Group_Outlet</fullName>
        <active>true</active>
        <label>EUR EE Group Outlet</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_Group_Outlet</fullName>
        <active>true</active>
        <label>EUR FI Group Outlet</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_GB_Group_Outlet</fullName>
        <active>true</active>
        <label>EUR GB Group Outlet</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_KE_Group_Outlet_Type</fullName>
        <active>true</active>
        <label>EUR KE Group Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LT_Group_Outlet</fullName>
        <active>true</active>
        <label>EUR LT Group Outlet</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LV_Group_Outlet</fullName>
        <active>true</active>
        <label>EUR LV Group Outlet</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_Group_Outlet_Type</fullName>
        <active>true</active>
        <label>EUR MA Group Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NG_Group_Outlet_Type</fullName>
        <active>true</active>
        <label>EUR NG Group Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PRT_GroupOutletType</fullName>
        <active>true</active>
        <label>EUR_PRT_GroupOutletType</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Group_Outlet_Type</fullName>
        <active>true</active>
        <label>EUR PT Group Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Group_Outlet_Type</fullName>
        <active>true</active>
        <label>EUR RU Group Outlet Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_Group_Outlet_Type</fullName>
        <active>true</active>
        <label>EUR ZA Group Outlet Type</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>